# modern-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yaml  extensions.py  justfile  mkdocs.yaml  mkdocs.yml  pylock.toml  pyproject.toml  tox.toml  zensical.toml
.github/workflows/: ci.yaml  docs.yaml
changelog.d/: +0430f7c3.changed.md  +068bbd44.changed.md  +07a6f9c1.changed.md  +0f9d852e.changed.md  +10b3dbe6.changed.md  +114dcec8.changed.md  +14049d34.security.md  +14668d96.changed.md  +146ce432.changed.md  +1596f055.changed.md  +15d4667f.changed.md  +15f228a5.added.md  +1f89046c.added.md  +1fe5166d.changed.md  +26b364b2.changed.md  +27d92eb1.changed.md  +2a5318d5.changed.md  +2ebf1511.changed.md  +2f7a6442.changed.md  +31a37fbd.changed.md  +36a67ead.changed.md  +37874580.changed.md  +3813a1b0.changed.md  +39467bb1.added.md  +3ae1d314.changed.md  +40b2bf47.changed.md  +4246782a.added.md  +42628cfa.changed.md  +45e2acb1.changed.md  +46483a0c.added.md  +4694f600.added.md  +46c93d12.added.md  +476d4d9b.fixed.md  +493d2bcd.changed.md  +4a13ecb4.changed.md  +4de488ed.changed.md  +52debbaa.changed.md  +58caa45b.changed.md  +595e22b0.added.md  +5aa83666.fixed.md  (+82 more)
docs/: changelog.md  index.md
extensions/: __init__.py  context.py  git.py  slugify.py  today.py
licenses/: Apache-2.0.jinja  BSD-3-Clause.jinja  MIT.jinja
scripts/: release.py
template/: .gitignore.jinja  .pre-commit-config.yaml.jinja  CHANGELOG.md  CODE_OF_CONDUCT.md.jinja  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  {% if docs == 'mkdocs' %}mkdocs.yaml{% endif %}.jinja  {% if docs == 'mkdocs' %}mkdocs.yml{% endif %}.jinja  {% if docs == 'zensical' %}zensical.toml{% endif %}.jinja  {% if tasks == 'nox' %}noxfile.py{% endif %}.jinja  {% if tasks == 'tox' %}tox.toml{% endif %}.jinja  {% if test_automation_tool == 'nox' %}noxfile.py{% endif %}.jinja  {% if test_automation_tool == 'tox' %}tox.toml{% endif %}.jinja  {{ _copier_conf.answers_file }}.jinja
template/.github/workflows/: ci.yaml.jinja  release.yaml.jinja  {% if tasks == 'nox' %}ci.yaml{% endif %}.jinja  {% if tasks == 'tox' %}ci.yaml{% endif %}.jinja
template/scripts/: release.py  release.py.jinja  {% if tasks == 'tox' %}release.py{% endif %}.jinja  {% if test_automation_tool == 'tox' %}release.py{% endif %}.jinja
template/src/: {% if dynamic_version %}.gitignore{% endif %}
template/src/{{ package_name }}/: __init__.py.jinja  __version__.py.jinja  {% if cli %}__main__.py{% endif %}.jinja  {% if cli %}log.py{% endif %}.jinja  {% if cli == 'argparse' %}cli.py{% endif %}.jinja
template/src/{{ package_name }}/{% if cli == 'argparse' %}.{% endif %}/: __main__.py.jinja  cli.py.jinja
template/src/{{ package_name }}/{% if cli == 'click' %}.{% endif %}/: __main__.py.jinja  cli.py.jinja
template/src/{{ package_name }}/{% if cli == 'cyclopts' %}.{% endif %}/: __main__.py.jinja  cli.py.jinja
template/src/{{ package_name }}/{% if cli == 'typer' %}.{% endif %}/: __main__.py.jinja  cli.py.jinja
template/src/{{ package_name }}/{% if dynamic_version %}.{% endif %}/: __version__.py.jinja
template/src/{{ package_name }}/{% if gui == 'tk' %}.{% endif %}/: __main__.py.jinja  gui.py.jinja
template/tests/: __init__.py.jinja  conftest.py.jinja  test_version.py.jinja  {% if cli %}test_cli.py{% endif %}.jinja  {% if cli == 'argparse' %}test_cli.py{% endif %}.jinja  {% if cli == 'click' %}test_cli.py{% endif %}.jinja  {% if cli == 'cyclopts' %}test_cli.py{% endif %}.jinja  {% if cli == 'typer' %}test_cli.py{% endif %}.jinja  {% if dynamic_version %}test_version.py{% endif %}.jinja  {% if dynamic_version %}test_version{% endif %}.jinja  {% if gui == 'tk' %}test_gui.py{% endif %}.jinja
template/{% if docs %}docs{% endif %}/api/: {% if cli %}{{ package_name }}.log.md{% endif %}.jinja
template/{% if docs %}docs{% endif %}/{% if docs == 'mkdocs' %}.{% endif %}/: changelog.md  index.md.jinja  license.md
template/{% if docs %}docs{% endif %}/{% if docs == 'mkdocs' %}.{% endif %}/api/: index.md  {% if cli %}{{ package_name }}.cli.md{% endif %}.jinja  {% if gui %}{{ package_name }}.gui.md{% endif %}.jinja  {{ package_name }}.md.jinja
template/{% if docs %}docs{% endif %}/{% if docs == 'mkdocs' %}.{% endif %}/reference/: api.md.jinja  index.md.jinja  {% if cli == 'click' %}cli.md{% endif %}.jinja  {% if cli and cli != 'click' %}cli.md{% endif %}.jinja
template/{% if docs %}docs{% endif %}/{% if docs == 'zensical' %}.{% endif %}/: index.md.jinja  license.md
template/{% if docs %}docs{% endif %}/{% if docs == 'zensical' %}.{% endif %}/reference/: api.md.jinja  index.md.jinja  {% if cli %}cli.md{% endif %}.jinja
tests/: __init__.py  utils.py
