[project]
name = "modern-python"
version = "5.0.0"
description = "Copier template for Python projects"
readme = "README.md"
keywords = [
  "copier",
  "template",
]
license = "MIT"
license-files = [
  "LICENSE",
]
maintainers = [
  { name = "Léo Bernard", email = "leodevian.gh@gmail.com" },
]
authors = [
  { name = "Léo Bernard", email = "leodevian.gh@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "copier>=9.6",
  "copier-template-extensions>=0.3.2",
]
urls.Changelog = "https://github.com/leodevian/modern-python/blob/main/CHANGELOG.md"
urls.Documentation = "https://github.com/leodevian/modern-python/tree/main/docs"
urls.Homepage = "https://github.com/leodevian/modern-python"
urls.Issues = "https://github.com/leodevian/modern-python/issues"
urls.Repository = "https://github.com/leodevian/modern-python"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "release" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [  ]
type = [
  "mypy>=1.19",
  { include-group = "test" },
]
docs = [
  "zensical>=0.0.11",
]
lint = [
  "pre-commit>=4.5",
]
release = [
  "towncrier>=25.8",
]

[tool.ruff]
extend-exclude = [  ]
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN401", # using Any is okay
  "COM812", # conflicts with formatter
  "ISC001", # conflicts with formatter
]
lint.per-file-ignores."extensions/**" = [
  "S603", # using subprocess is okay
]
lint.per-file-ignores."tests/**" = [
  "S101", # using assert is okay in tests
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"
lint.future-annotations = true

[tool.codespell]
write-changes = true

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.towncrier]
name = "modern-python"
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = [ "", "", "" ]
title_format = "## [{version}](https://github.com/leodevian/modern-python/tree/v{version})"
issue_format = "[#{issue}](https://github.com/leodevian/modern-python/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.mypy]
python_version = "3.10"
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
pretty = true
